# LwIPC

./: .gitignore  CMakeLists.txt  README.md  README_zh.md
cmake/: LwIPCConfig.cmake.in
examples/: ai_subscriber.cpp  benchmark.cpp  sensor_publisher.cpp  socket_bridge.cpp
include/lwipc/: channel_registry.hpp  channel_stats.hpp  ipc_message.hpp  loaned_sample.hpp  lwipc.hpp  lwipc_version.hpp.in  mpmc_ring_buffer.hpp  object_pool.hpp  publisher.hpp  shm_ring_buffer.hpp  socket_transport.hpp  subscriber.hpp  sync_policy.hpp
src/: loaned_sample.cpp  object_pool.cpp  publisher.cpp  subscriber.cpp
test/: test_pubsub.cpp
tests/: test_ipc_message.cpp  test_new_features.cpp  test_pub_sub.cpp  test_pubsub.cpp  test_shm_ring_buffer.cpp  test_socket_transport.cpp
